--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html>
   <head>
     <meta charset="utf-8">
+    <style></style>
     <title>Matahi Historical Society homepage</title>
     <link rel="stylesheet" href="styles/styles.css">
   </head>
